--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,64 @@
 <ion-app>
-  <ion-router-outlet></ion-router-outlet>
+  <ion-menu contentId="content1" side="start">
+    <ion-header>
+      <ion-toolbar>
+        <ion-title>Trovilo</ion-title>
+      </ion-toolbar>
+    </ion-header>
+    <ion-content>
+
+
+
+      <ion-list-header>SYNCHRONIZATION</ion-list-header>
+      <ion-menu-toggle auto-hide="true">
+        <ion-item [routerLink]="['#']">
+          <ion-icon slot="start" name="laptop"></ion-icon>
+          <ion-label>
+            My Computer
+          </ion-label>
+        </ion-item>
+        <ion-item [routerLink]="['#']">
+          <ion-icon slot="start" name="phone-portrait"></ion-icon>
+          <ion-label>
+            My Phone
+          </ion-label>
+        </ion-item>
+        <ion-item [routerLink]="['#']">
+          <ion-icon slot="start" name="cloud-upload"></ion-icon>
+          <ion-label>
+            Backups
+          </ion-label>
+        </ion-item>
+      </ion-menu-toggle>
+
+
+      
+
+      <ion-list-header>ACCOUNT & SETTINGS</ion-list-header>
+  <ion-menu-toggle auto-hide="true">
+    <ion-item (click)="goToProfile()">
+      <ion-icon slot="start" name="person"></ion-icon>
+      <ion-label>
+        My Profile
+      </ion-label>
+    </ion-item>
+    <ion-item [routerLink]="['#']">
+      <ion-icon slot="start" name="settings"></ion-icon>
+      <ion-label>
+        Settings
+      </ion-label>
+    </ion-item>
+    <ion-item (click)="logOut()">
+      <ion-icon slot="start" name="log-out"></ion-icon>
+      <ion-label>
+        Logout
+      </ion-label>
+    </ion-item>
+  </ion-menu-toggle>
+
+
+
+    </ion-content>
+  </ion-menu>
+  <ion-router-outlet id="content1" main></ion-router-outlet>
 </ion-app>
